logs/offboard_pkg/build.make.195.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In constructor ‘MultiBody::MultiBody()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:48:5: error: invalid use of member function ‘ros::Rate MultiBody::rate()’ (did you forget the ‘()’ ?)
   48 |     rate = rate0;
      |     ^~~~
      |         ()
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::WaitAllFCU()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:63:5: error: invalid use of member function ‘ros::Rate MultiBody::rate()’ (did you forget the ‘()’ ?)
   63 |     rate.sleep();
      |     ^~~~
      |         ()
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::WaitAllGPS()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:79:5: error: invalid use of member function ‘ros::Rate MultiBody::rate()’ (did you forget the ‘()’ ?)
   79 |     rate.sleep();
      |     ^~~~
      |         ()
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::AllTakeoff()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:94:5: error: invalid use of member function ‘ros::Rate MultiBody::rate()’ (did you forget the ‘()’ ?)
   94 |     rate.sleep();
      |     ^~~~
      |         ()
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::AllWayPoints()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:118:13: error: invalid use of member function ‘ros::Rate MultiBody::rate()’ (did you forget the ‘()’ ?)
  118 |             rate.sleep();
      |             ^~~~
      |                 ()
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
